--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@improbable-eng/grpc-web": "^0.13.0",
+    "@improbable-eng/grpc-web-react-native-transport": "^0.13.0",
+    "buffer": "^5.6.0",
+    "google-protobuf": "^3.13.0",
     "react": "16.13.1",
     "react-native": "0.63.2"
   },
@@ -17,11 +21,13 @@
     "@babel/core": "^7.11.6",
     "@babel/runtime": "^7.11.2",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/google-protobuf": "^3.7.3",
     "babel-jest": "^26.3.0",
     "eslint": "^7.9.0",
     "jest": "^26.4.2",
     "metro-react-native-babel-preset": "^0.63.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "ts-protoc-gen": "^0.13.0"
   },
   "jest": {
     "preset": "react-native"
